Fixed z-index bug with some extentions, profitest -> platforma.exe

--- a/client/src/Components/App/App.css
+++ b/client/src/Components/App/App.css
@@ -34,6 +34,7 @@ p {
 }
 a {
   text-decoration: none;
+  z-index: 2000000000 !important;
 }
 .no-select {
   user-select: none;
